fix(sidebar): Improve appearance. Change spacing, add bullets

--- a/themes/concise/source/css/_partial/sidebar.styl
+++ b/themes/concise/source/css/_partial/sidebar.styl
@@ -1,6 +1,16 @@
+.recent-posts
+    ul
+      list-style disc
+      li
+        margin-bottom: 5px
+
+.category
+  ul
+    list-style none
+
 #sidebar
   width 270px
-  line-height 1.8em
+  line-height 1.2em
 
   .about-photo
     border-radius: 50%
@@ -35,11 +45,8 @@
       font-size 0.9em
       padding 15px 20px
 
-    ul, ol, dl
-      list-style none
-      ul, ol, dl
-        list-style disc
-        margin-left 20px
+    li
+      margin-bottom: 5px
 
   .search
     margin-bottom 30px
